car-ml/mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-tracking-server
  namespace: mlflow
spec:
  selector:
    app: mlflow-tracking
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
