car-ml/mlflow/ingress-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mlflow-istio-vs
spec:
  hosts:
    - "mlflow.istio.xebik.art"
  gateways:
    - xebikart-gateway
  http:
    - route:
      - destination:
          host: mlflow-server-svc
